kube/deploy/apps/firefly/app/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: firefly
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    pod-security.kubernetes.io/enforce: &ps restricted
    pod-security.kubernetes.io/audit: *ps
    pod-security.kubernetes.io/warn: *ps
